# çº¿ç´¢UIè„šæœ¬
extends CanvasLayer

# å¯¼å‡ºå˜é‡ï¼ˆå¯åœ¨ç¼–è¾‘å™¨ä¸­é…ç½®ï¼‰
@export var background_texture: Texture2D = null  # èƒŒæ™¯å›¾ç‰‡ï¼ˆå¯é€‰ï¼‰

# èŠ‚ç‚¹å¼•ç”¨ï¼ˆéœ€è¦åœ¨åœºæ™¯ä¸­é…ç½®ï¼‰
@onready var panel: Panel = $Control/Panel
@onready var background_texture_rect: TextureRect = $Control/Panel/BackgroundTexture
@onready var title_label: Label = $Control/Panel/TitleLabel
@onready var clue_list: VBoxContainer = $Control/Panel/ScrollContainer/ClueList
@onready var scroll_container: ScrollContainer = $Control/Panel/ScrollContainer
@onready var close_button: Button = $Control/Panel/CloseButton
@onready var no_clue_label: Label = $Control/Panel/NoClueLabel
@onready var clue_detail_panel: Panel = $Control/Panel/ClueDetailPanel
@onready var clue_detail_title: Label = $Control/Panel/ClueDetailPanel/TitleLabel
@onready var clue_detail_desc: Label = $Control/Panel/ClueDetailPanel/DescriptionLabel
@onready var clue_detail_close: Button = $Control/Panel/ClueDetailPanel/CloseButton
@onready var clue_detail_icon: TextureRect = $Control/Panel/ClueDetailPanel/IconTexture

func _ready():
	# æ·»åŠ åˆ°ç»„
	add_to_group("clue_ui")
	
	# åˆå§‹éšè—
	visible = false
	if clue_detail_panel:
		clue_detail_panel.visible = false
	
	# è¿æ¥æŒ‰é’®
	if close_button:
		close_button.pressed.connect(_on_close_button_pressed)
	if clue_detail_close:
		clue_detail_close.pressed.connect(_on_detail_close_pressed)
	
	# è¿æ¥çº¿ç´¢ç®¡ç†å™¨ä¿¡å·
	if has_node("/root/ClueManager"):
		ClueManager.clue_collected.connect(_on_clue_collected)
	
	# è®¾ç½®èƒŒæ™¯å›¾ç‰‡
	if background_texture and background_texture_rect:
		background_texture_rect.texture = background_texture
		background_texture_rect.visible = true
		# å¦‚æœæœ‰èƒŒæ™¯å›¾ï¼Œè®¾ç½®Panelä¸ºé€æ˜
		if panel:
			var style_box = StyleBoxEmpty.new()
			panel.add_theme_stylebox_override("panel", style_box)
		print("[INFO] å·²è®¾ç½®çº¿ç´¢UIèƒŒæ™¯å›¾ç‰‡")
	elif background_texture_rect:
		background_texture_rect.visible = false
	
	# è®¾ç½®æ ·å¼
	_setup_ui_style()
	
	# åˆå§‹æ›´æ–°
	update_clue_list()

func _setup_ui_style():
	"""è®¾ç½®UIæ ·å¼"""
	if panel:
		var style_box = StyleBoxFlat.new()
		style_box.bg_color = Color(0.1, 0.1, 0.15, 0.95)
		style_box.border_color = Color(0.3, 0.3, 0.4, 1.0)
		style_box.border_width_left = 4
		style_box.border_width_top = 4
		style_box.border_width_right = 4
		style_box.border_width_bottom = 4
		style_box.corner_radius_top_left = 10
		style_box.corner_radius_top_right = 10
		style_box.corner_radius_bottom_left = 10
		style_box.corner_radius_bottom_right = 10
		panel.add_theme_stylebox_override("panel", style_box)
	
	if clue_detail_panel:
		var detail_style = StyleBoxFlat.new()
		detail_style.bg_color = Color(0.15, 0.15, 0.2, 0.98)
		detail_style.border_color = Color(0.4, 0.4, 0.5, 1.0)
		detail_style.border_width_left = 4
		detail_style.border_width_top = 4
		detail_style.border_width_right = 4
		detail_style.border_width_bottom = 4
		detail_style.corner_radius_top_left = 10
		detail_style.corner_radius_top_right = 10
		detail_style.corner_radius_bottom_left = 10
		detail_style.corner_radius_bottom_right = 10
		clue_detail_panel.add_theme_stylebox_override("panel", detail_style)
	
	if title_label:
		title_label.add_theme_color_override("font_color", Color.WHITE)
		title_label.add_theme_font_size_override("font_size", 56)  # ä»40å¢åŠ åˆ°56
	
	if no_clue_label:
		no_clue_label.add_theme_color_override("font_color", Color(0.7, 0.7, 0.7, 1.0))
		no_clue_label.add_theme_font_size_override("font_size", 40)  # å¢å¤§å­—ä½“

func _input(event: InputEvent):
	"""å¤„ç†è¾“å…¥äº‹ä»¶"""
	if event.is_action_pressed("ui_cancel") and visible:
		if clue_detail_panel and clue_detail_panel.visible:
			hide_clue_detail()
		else:
			hide_clue_ui()
		get_viewport().set_input_as_handled()

func show_clue_ui():
	"""æ˜¾ç¤ºçº¿ç´¢UI"""
	visible = true
	update_clue_list()
	
	# é€šçŸ¥ç©å®¶è¿›å…¥äº¤äº’çŠ¶æ€
	var player = get_tree().get_first_node_in_group("player")
	if player and player.has_method("set_interacting"):
		player.set_interacting(true)

func hide_clue_ui():
	"""éšè—çº¿ç´¢UI"""
	visible = false
	hide_clue_detail()
	
	# é€šçŸ¥ç©å®¶é€€å‡ºäº¤äº’çŠ¶æ€
	var player = get_tree().get_first_node_in_group("player")
	if player and player.has_method("set_interacting"):
		player.set_interacting(false)

func update_clue_list():
	"""æ›´æ–°çº¿ç´¢åˆ—è¡¨"""
	if not has_node("/root/ClueManager"):
		return
	
	if not clue_list:
		return
	
	# æ¸…ç©ºåˆ—è¡¨
	for child in clue_list.get_children():
		child.queue_free()
	
	# è·å–æ”¶é›†çš„çº¿ç´¢
	var collected_clues = ClueManager.get_collected_clues_info()
	
	if collected_clues.is_empty():
		# æ˜¾ç¤º"æ— çº¿ç´¢"æç¤º
		if no_clue_label:
			no_clue_label.visible = true
		return
	
	if no_clue_label:
		no_clue_label.visible = false
	
	# â­ æŒ‰ç« èŠ‚åˆ†ç»„çº¿ç´¢
	var clues_by_chapter = {}
	for clue in collected_clues:
		var chapter = clue.get("chapter", 0)
		if chapter not in clues_by_chapter:
			clues_by_chapter[chapter] = []
		clues_by_chapter[chapter].append(clue)
	
	# â­ æŒ‰ç« èŠ‚é¡ºåºæ˜¾ç¤ºï¼ˆ1, 2, 3ï¼‰
	var chapters = clues_by_chapter.keys()
	chapters.sort()
	
	for chapter in chapters:
		# â­ åˆ›å»ºç« èŠ‚æ ‡é¢˜ï¼ˆå¸¦è¿›åº¦ï¼‰
		_create_chapter_header(chapter)
		
		# åˆ›å»ºè¯¥ç« èŠ‚çš„çº¿ç´¢é¡¹
		for clue in clues_by_chapter[chapter]:
			_create_clue_item(clue)
		
		# æ·»åŠ ç« èŠ‚åˆ†éš”
		_create_chapter_separator()

func _create_chapter_header(chapter: int):
	"""åˆ›å»ºç« èŠ‚æ ‡é¢˜ï¼ˆå¸¦è¿›åº¦ï¼‰"""
	var chapter_container = HBoxContainer.new()
	chapter_container.add_theme_constant_override("separation", 15)
	
	# ç« èŠ‚åç§°
	var chapter_label = Label.new()
	var chapter_name = ""
	match chapter:
		1:
			chapter_name = "ç¬¬ä¸€ç« ï¼šé’å¹´æ—¶æœŸ"
		2:
			chapter_name = "ç¬¬äºŒç« ï¼šé•¿å®‰æ—¶æœŸ"
		3:
			chapter_name = "ç¬¬ä¸‰ç« ï¼šæ™šå¹´æ—¶æœŸ"
		_:
			chapter_name = "ç¬¬%dç« " % chapter
	
	chapter_label.text = chapter_name
	chapter_label.add_theme_color_override("font_color", Color(1.0, 0.8, 0.2, 1.0))  # é‡‘è‰²
	chapter_label.add_theme_font_size_override("font_size", 44)
	chapter_label.add_theme_constant_override("outline_size", 4)
	chapter_label.add_theme_color_override("font_outline_color", Color.BLACK)
	chapter_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_LEFT
	chapter_container.add_child(chapter_label)
	
	# â­ ç« èŠ‚çº¿ç´¢è¿›åº¦
	var progress_label = Label.new()
	if has_node("/root/AchievementManager"):
		var progress = AchievementManager.get_chapter_clue_progress(chapter)
		var progress_text = "(%d/%d)" % [progress["collected"], progress["total"]]
		
		# å¦‚æœå·²å®Œæˆï¼Œæ˜¾ç¤ºæˆå°±å›¾æ ‡
		if progress["collected"] >= progress["total"] and progress["total"] > 0:
			progress_text = "ğŸ† " + progress_text + " å·²å®Œæˆ"
			progress_label.add_theme_color_override("font_color", Color(1.0, 0.9, 0.3, 1.0))  # é‡‘è‰²
		else:
			progress_label.add_theme_color_override("font_color", Color(0.7, 0.9, 1.0, 1.0))  # æ·¡è“è‰²
		
		progress_label.text = progress_text
		progress_label.add_theme_font_size_override("font_size", 36)
		progress_label.add_theme_constant_override("outline_size", 3)
		progress_label.add_theme_color_override("font_outline_color", Color.BLACK)
		progress_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_LEFT
		chapter_container.add_child(progress_label)
	
	# æ·»åŠ å·¦è¾¹è·
	var outer_container = HBoxContainer.new()
	outer_container.add_theme_constant_override("separation", 0)
	var spacer = Control.new()
	spacer.custom_minimum_size = Vector2(20, 0)
	outer_container.add_child(spacer)
	outer_container.add_child(chapter_container)
	outer_container.custom_minimum_size = Vector2(0, 70)  # å¢å¤§é«˜åº¦
	
	clue_list.add_child(outer_container)

func _create_chapter_separator():
	"""åˆ›å»ºç« èŠ‚åˆ†éš”çº¿"""
	var separator = HSeparator.new()
	separator.custom_minimum_size = Vector2(0, 4)
	clue_list.add_child(separator)
	
	# æ·»åŠ é—´è·
	var spacer = Control.new()
	spacer.custom_minimum_size = Vector2(0, 15)
	clue_list.add_child(spacer)

func _create_clue_item(clue: Dictionary):
	"""åˆ›å»ºçº¿ç´¢é¡¹UI"""
	var clue_id = clue.get("clue_id", "")
	var title = clue.get("title", "æœªçŸ¥çº¿ç´¢")
	var category = clue.get("category", "unknown")
	var icon_path = clue.get("icon", "")
	var source = clue.get("source", "quest")  # è·å–çº¿ç´¢æ¥æº
	
	# â­ åˆ›å»ºçº¿ç´¢é¡¹å®¹å™¨ - å¢å¤§å°ºå¯¸
	var clue_item = HBoxContainer.new()
	clue_item.add_theme_constant_override("separation", 20)  # å¢å¤§é—´è·
	clue_item.custom_minimum_size = Vector2(0, 100)  # ä»70å¢åŠ åˆ°100
	
	# â­ çº¿ç´¢å›¾æ ‡ï¼ˆå¦‚æœæœ‰ï¼‰- å¢å¤§å›¾æ ‡å°ºå¯¸
	if icon_path != "":
		var icon_rect = TextureRect.new()
		icon_rect.custom_minimum_size = Vector2(90, 90)  # ä»60å¢åŠ åˆ°90
		icon_rect.expand_mode = TextureRect.EXPAND_FIT_WIDTH_PROPORTIONAL
		icon_rect.stretch_mode = TextureRect.STRETCH_KEEP_ASPECT_CENTERED
		var icon_texture = load(icon_path)
		if icon_texture:
			icon_rect.texture = icon_texture
		else:
			# å¦‚æœåŠ è½½å¤±è´¥ï¼Œä½¿ç”¨å ä½ç¬¦
			var placeholder = Label.new()
			placeholder.text = "ğŸ”"
			placeholder.add_theme_font_size_override("font_size", 72)  # ä»48å¢åŠ åˆ°72
			icon_rect.add_child(placeholder)
		clue_item.add_child(icon_rect)
	else:
		# æ²¡æœ‰å›¾æ ‡æ—¶ä½¿ç”¨å ä½ç¬¦ - å¢å¤§å°ºå¯¸
		var placeholder = Label.new()
		placeholder.text = "ğŸ”"
		placeholder.custom_minimum_size = Vector2(90, 90)  # ä»60å¢åŠ åˆ°90
		placeholder.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		placeholder.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
		placeholder.add_theme_font_size_override("font_size", 72)  # ä»48å¢åŠ åˆ°72
		clue_item.add_child(placeholder)
	
	# â­ å†…å®¹å®¹å™¨ï¼ˆå‚ç›´å¸ƒå±€ï¼‰
	var content_container = VBoxContainer.new()
	content_container.add_theme_constant_override("separation", 8)
	content_container.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	
	# â­ çº¿ç´¢æ ‡é¢˜æŒ‰é’® - å¢å¤§å­—ä½“å’Œå°ºå¯¸
	var title_button = Button.new()
	title_button.text = title
	title_button.add_theme_color_override("font_color", Color(0.9, 0.95, 1.0, 1.0))
	title_button.add_theme_font_size_override("font_size", 36)  # ä»28å¢åŠ åˆ°36
	title_button.custom_minimum_size = Vector2(400, 50)  # å¢å¤§å°ºå¯¸
	title_button.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	title_button.pressed.connect(func(): show_clue_detail(clue_id))
	content_container.add_child(title_button)
	
	# â­ çº¿ç´¢ä¿¡æ¯è¡Œï¼ˆåˆ†ç±»å’Œæ¥æºï¼‰
	var info_container = HBoxContainer.new()
	info_container.add_theme_constant_override("separation", 15)
	
	# çº¿ç´¢åˆ†ç±»æ ‡ç­¾ - å¢å¤§å­—ä½“
	var category_label = Label.new()
	var category_text = ""
	match category:
		"event":
			category_text = "[äº‹ä»¶]"
		"person":
			category_text = "[äººç‰©]"
		"location":
			category_text = "[åœ°ç‚¹]"
		"item":
			category_text = "[ç‰©å“]"
		_:
			category_text = "[å…¶ä»–]"
	
	category_label.text = category_text
	category_label.add_theme_color_override("font_color", Color(0.6, 0.8, 1.0, 1.0))
	category_label.add_theme_font_size_override("font_size", 28)  # ä»22å¢åŠ åˆ°28
	info_container.add_child(category_label)
	
	# â­ çº¿ç´¢æ¥æºæ ‡ç­¾
	var source_label = Label.new()
	var source_text = ""
	match source:
		"quest":
			source_text = "ä»»åŠ¡è·å¾—"
		"scene":
			source_text = "åœºæ™¯æ”¶é›†"
		_:
			source_text = ""
	
	if source_text != "":
		source_label.text = "â€¢ " + source_text
		source_label.add_theme_color_override("font_color", Color(0.8, 0.6, 1.0, 1.0))  # ç´«è‰²
		source_label.add_theme_font_size_override("font_size", 24)
		info_container.add_child(source_label)
	
	content_container.add_child(info_container)
	clue_item.add_child(content_container)
	
	# æ·»åŠ åˆ°åˆ—è¡¨
	clue_list.add_child(clue_item)

func show_clue_detail(clue_id: String):
	"""æ˜¾ç¤ºçº¿ç´¢è¯¦æƒ…"""
	if not has_node("/root/ClueManager"):
		return
	
	var clue = ClueManager.get_clue_info(clue_id)
	if clue.is_empty():
		return
	
	if clue_detail_panel:
		clue_detail_panel.visible = true
	
	if clue_detail_title:
		clue_detail_title.text = clue.get("title", "æœªçŸ¥çº¿ç´¢")
	
	# æ˜¾ç¤ºçº¿ç´¢å›¾æ ‡ï¼ˆå¦‚æœæœ‰ï¼‰
	if clue_detail_icon:
		var icon_path = clue.get("icon", "")
		if icon_path != "":
			var icon_texture = load(icon_path)
			if icon_texture:
				clue_detail_icon.texture = icon_texture
				clue_detail_icon.visible = true
			else:
				clue_detail_icon.visible = false
		else:
			clue_detail_icon.visible = false
	
	if clue_detail_desc:
		var desc = clue.get("description", "")
		var chapter = clue.get("chapter", 0)
		var source = clue.get("source", "quest")
		var source_text = ""
		match source:
			"quest":
				source_text = "ä»»åŠ¡è·å¾—"
			"scene":
				source_text = "åœºæ™¯æ”¶é›†"
		
		if chapter > 0:
			var chapter_name = ""
			match chapter:
				1:
					chapter_name = "ç¬¬ä¸€ç« ï¼šé’å¹´æ—¶æœŸ"
				2:
					chapter_name = "ç¬¬äºŒç« ï¼šé•¿å®‰æ—¶æœŸ"
				3:
					chapter_name = "ç¬¬ä¸‰ç« ï¼šæ™šå¹´æ—¶æœŸ"
				_:
					chapter_name = "ç¬¬%dç« " % chapter
			desc = "%s\næ¥æºï¼š%s\n\n%s" % [chapter_name, source_text, desc]
		clue_detail_desc.text = desc
		clue_detail_desc.add_theme_font_size_override("font_size", 32)  # ä»24å¢åŠ åˆ°32
		clue_detail_desc.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART

func hide_clue_detail():
	"""éšè—çº¿ç´¢è¯¦æƒ…"""
	if clue_detail_panel:
		clue_detail_panel.visible = false

func _on_clue_collected(clue_id: String):
	"""çº¿ç´¢æ”¶é›†å›è°ƒ"""
	update_clue_list()
	# å¯ä»¥åœ¨è¿™é‡Œæ˜¾ç¤ºæ”¶é›†æç¤º

func _on_close_button_pressed():
	"""å…³é—­æŒ‰é’®ç‚¹å‡»"""
	hide_clue_ui()

func _on_detail_close_pressed():
	"""è¯¦æƒ…å…³é—­æŒ‰é’®ç‚¹å‡»"""
	hide_clue_detail()

